--- a/TEQClient/teqclient/index.html
+++ b/TEQClient/teqclient/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <title>TEQ - Test Exam Quiz</title>
+
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="format-detection" content="telephone=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="author" content="Megarekrut65">
+    <meta name="keywords" content="teq, test, exam, quiz">
+    <meta name="description" content="Test Exam Quiz - app for student testing">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
   </head>
-  <body>
+  <body data-bs-spy="scroll" data-bs-target="#header" tabindex="0">
     <div id="app"></div>
+
     <script type="module" src="/src/main.js"></script>
+
   </body>
 </html>
