--- a/TEQClient/teqclient/index.html
+++ b/TEQClient/teqclient/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <title>TEQ - Test Exam Quiz</title>
 
     <meta charset="UTF-8">
@@ -8,19 +8,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="author" content="Megarekrut65">
     <meta name="keywords" content="teq, test, exam, quiz">
     <meta name="description" content="Test Exam Quiz - app for student testing">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
+          integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
-  </head>
-  <body data-bs-spy="scroll" data-bs-target="#header" tabindex="0">
-    <div id="app"></div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
+</head>
+<body data-bs-spy="scroll" data-bs-target="#header" tabindex="0">
+<div id="app"></div>
 
-    <script type="module" src="/src/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+        crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/3ff003e4f2.js" crossorigin="anonymous"></script>
 
-  </body>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
